force-app/main/default/objects/CA_ImoveisContratos__c/CA_ImoveisContratos__c.object-meta.xml
<CustomObject>
    <label>Imóveis do Contrato</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Imoveis do Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imóveis dos Contratos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>