force-app/main/default/objects/CA_ImoveisContratos__c/fields/CA_Contratos__c.field-meta.xml
<CustomField>
    <fullName>CA_Contratos__c</fullName>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Imoveis dos Contratos</relationshipLabel>
    <relationshipName>Imoveis_dos_Contratos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>