force-app/main/default/objects/CA_ImoveisContratos__c/fields/CA_indiceReajuste__c.field-meta.xml
<CustomField>
    <fullName>CA_indiceReajuste__c</fullName>
    <label>Índice de Reajuste</label>
    <length>80</length>
    <type>Text</type>
</CustomField>